--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,9 @@
     "modernizr": "~2.6.2",
     "dojo": "~1.9",
     "matchmedia": "~0.1.0",
-    "dojox": "~1.9.2"
+    "dojox": "~1.9.2",
+    "onx": "git://github.com/eduardo-matos/onx.git",
+    "mout": "~0.7.1"
   },
   "devDependencies": {}
 }
